# conway-life-lecture

./: .gitignore  Cargo.toml  README.md
art/: scene.blend  scene.blend1  scene.glb
art/models/fbx/: Cheering While Sitting.fbx  Man Sitting Idle.fbx  Sitting Talking.fbx  Sitting.fbx  Strut Walking.fbx  Talking.fbx
assets/: README.md  registry.json
assets/models/: scene.glb  scene2.glb
src/: animations.rs  camera.rs  common.rs  env.rs  lecturer.rs  life.rs  main.rs  people.rs  ui.rs
