[package]
name = "life3d"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# bevy-inspector-egui = "0.24"

bevy_gltf_animator_helper = {git = "https://github.com/xenon615/bevy_gltf_animator_helper"}
fastrand = "2.0.1"

[dependencies.regex]
version = "1.10.4"
default-features = false
features = ["std"]



# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# [profile.release]    # wasm less size 
# opt-level = 'z'

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "dynamic_linking",
    # "animation",	        
    # "bevy_animation",
    "bevy_asset",	        
    # "bevy_audio",	        
    "bevy_color",	        
    "bevy_core_pipeline",
    "bevy_gizmos",   
    "bevy_gltf",      
    # "bevy_input_focus",
    # "bevy_mesh_picking_backend",
    "bevy_pbr",
    # "bevy_picking",
    "bevy_render",
    # "bevy_scene",
    # "bevy_sprite",
    # "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    # "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    # "custom_cursor",
    "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "smaa_luts",
    # "sysinfo_plugin",
    "tonemapping_luts",
    # "tracing",
    # "vorbis",
    # "webgl2",
    # "x11",
    # "zstd",
    "std",
    "async_executor"
]
